--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,10 @@ on:
     branches:
       - 'main'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
@@ -21,11 +25,11 @@ jobs:
       run:
         working-directory: ./go/advice_kit_api
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         # increased fetch depth to support git diff
         fetch-depth: 2
-    - uses: actions/setup-go@v3
+    - uses: actions/setup-go@v4
       with:
         go-version: '1.20'
     - run: ./build.sh
@@ -40,8 +44,8 @@ jobs:
       run:
         working-directory: ./go/advice_kit_test
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v4
         with:
           go-version: '1.20'
       - name: Audit
