--- a/openapi/spec.yml
+++ b/openapi/spec.yml
@@ -82,6 +82,9 @@ components:
         name:
           type: string
           description: "A human-readable name for the experiment template."
+        description:
+          type: string
+          description: "A human-readable description for the experiment template."
         experiment:
           $ref: '#/components/schemas/Experiment'
       required:
