--- a/openapi/spec.yml
+++ b/openapi/spec.yml
@@ -53,7 +53,7 @@ components:
         status:
           $ref: '#/components/schemas/AdviceDefinitionStatus'
         templateEngine:
-          description: "The template engine that is used to render different aspects including validation experiments of the advice."
+          description: "The template engine that is used to render different aspects including validation experiments of the advice. 'LEGACY' is deprecated and should not longer be used."
           type: string
           enum:
             - LEGACY
