--- a/openapi/spec.yml
+++ b/openapi/spec.yml
@@ -134,13 +134,13 @@ components:
         properties:
           summary:
             type: string
-            description: "A human-readable summary of the action needed in mark down format. (you can use placeholder like ${target.k8s.pod.name})"
+            description: "A human-readable summary of the action needed in mark down format. (you can use placeholder like ${target.attr('k8s.pod.name')})"
           motivation:
             type: string
-            description: "A human-readable motivation of the action needed in mark down format. (you can use placeholder like ${target.k8s.pod.name})"
+            description: "A human-readable motivation of the action needed in mark down format. (you can use placeholder like ${target.attr('k8s.pod.name')})"
           instruction:
             type: string
-            description: "A human-readable instructions of the action needed in mark down format. (you can use placeholder like ${target.k8s.pod.name})"
+            description: "A human-readable instructions of the action needed in mark down format. (you can use placeholder like ${target.attr('k8s.pod.name')})"
         required:
             - summary
             - motivation
@@ -169,7 +169,7 @@ components:
       properties:
         summary:
           type: string
-          description: "A human-readable summary of the validation needed in mark down format. (you can use placeholder like ${target.k8s.pod.name})"
+          description: "A human-readable summary of the validation needed in mark down format. (you can use placeholder like ${target.attr('k8s.pod.name')})"
       required:
         - summary
 
@@ -191,7 +191,7 @@ components:
       properties:
         summary:
           type: string
-          description: "A human-readable summary of the implemented in mark down format. (you can use placeholder like ${target.k8s.pod.name})"
+          description: "A human-readable summary of the implemented in mark down format. (you can use placeholder like ${target.attr('k8s.pod.name')})"
       required:
         - summary
 
