--- a/openapi/spec.yml
+++ b/openapi/spec.yml
@@ -79,9 +79,9 @@ components:
           enum:
             - EXPERIMENT
             - TEXT
-        experimentMultiplierAttribute:
+        forEachAttribute:
           type: string
-          description: "The attribute that is used to multiply the validation experiment. The attribute must be an array."
+          description: "The attribute that is used to multiply the validation."
         experiment:
           $ref: '#/components/schemas/Experiment'
         experimentTemplate:
