--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           fetch-depth: 2
       - uses: actions/setup-go@v6
         with:
-          go-version: '1.24'
+          go-version: '^1.25.4'
       - run: ./build.sh
       - run: git diff --exit-code
         name: "Ensure that Go API changes (as a consequence of OpenAPI spec changes) are checked in"
@@ -47,7 +47,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-go@v6
         with:
-          go-version: '1.24'
+          go-version: '^1.25.4'
       - name: Audit
         run: |
           go mod download
@@ -62,7 +62,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-go@v6
         with:
-          go-version: '1.24'
+          go-version: '^1.25.4'
       - name: Audit
         run: |
           go mod download
